# karta

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  COMPETITIVE.md  COMPETITIVE_RRR.md  Cargo.toml  Dockerfile  README.md  install.sh
.context/: codex-session-id
.github/: EXTERNAL_PR_REVIEW.md
.github/workflows/: ci.yml
.pi/: APPEND_SYSTEM.md
.pi/extensions/: karta.ts
crates/karta-cli/: Cargo.toml
crates/karta-cli/src/: installer.rs  main.rs
crates/karta-core/: Cargo.toml
crates/karta-core/src/: activate.rs  config.rs  contradiction.rs  extract.rs  forget.rs  karta.rs  lib.rs  migrate.rs  note.rs  read.rs  rerank.rs  rules.rs  rules_engine.rs  write.rs
crates/karta-core/src/dream/: engine.rs  types.rs
crates/karta-core/src/llm/: mock.rs  prompts.rs
crates/karta-core/src/store/: lance.rs  sqlite.rs  traits.rs
crates/karta-core/tests/: beam_100k.rs  bench_beam.rs  eval.rs  synthetic_memory_eval.rs
crates/karta-server/: Cargo.toml
crates/karta-server/src/: config.rs  db.rs  error.rs  main.rs  mcp.rs  middleware.rs  routes.rs  state.rs
crates/karta-server/src/oauth/: authorize.rs  callback.rs  discovery.rs  register.rs  token.rs
