[package]
name = "karta-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Karta memory system"

[[bin]]
name = "karta"
path = "src/main.rs"

[dependencies]
karta-core = { path = "../karta-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
