[package]
name = "karta-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agentic memory system that thinks, not just stores"

[features]
default = ["lance", "sqlite", "openai"]
lance = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]
sqlite = ["dep:rusqlite"]
openai = ["dep:async-openai"]
eval-harnesses = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"

# IDs and time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client (for reranker APIs)
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"

# Env
dotenvy = "0.15"

# Vector store: LanceDB
lancedb = { version = "0.27", optional = true, features = ["gcs"] }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }

# Graph store: SQLite
rusqlite = { version = "0.35", features = ["bundled"], optional = true }

# LLM: OpenAI-compatible
async-openai = { version = "0.27", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
uuid = { version = "1", features = ["v4"] }

# These ignored benchmark/evaluation harnesses are useful locally, but very large
# to compile/link in GitHub's default runners. Keep them out of default CI builds;
# enable explicitly with `--features eval-harnesses` when running them.
[[test]]
name = "beam_100k"
path = "tests/beam_100k.rs"
required-features = ["eval-harnesses"]

[[test]]
name = "bench_beam"
path = "tests/bench_beam.rs"
required-features = ["eval-harnesses"]

[[test]]
name = "inspect"
path = "tests/inspect.rs"
required-features = ["eval-harnesses"]

[[test]]
name = "locomo"
path = "tests/locomo.rs"
required-features = ["eval-harnesses"]

[[test]]
name = "longmem"
path = "tests/longmem.rs"
required-features = ["eval-harnesses"]

[[test]]
name = "real_eval"
path = "tests/real_eval.rs"
required-features = ["eval-harnesses"]
